# fishrambeta

./: ':w  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml  static.yml
fishrambeta/: Cargo.toml  perf.data  perf.data.old
fishrambeta-cli/: Cargo.toml
fishrambeta-cli/src/: main.rs
fishrambeta-plot/: Cargo.toml
fishrambeta-wasm/: Cargo.toml  \
fishrambeta-wasm/src/: lib.rs
fishrambeta-web/: index.html  manifest.json  pkg  script.js  style.css
fishrambeta/src/: latexifier.rs  lib.rs  logger.rs  main.rs  math.rs  parser.rs  physicsvalues.rs  tests.rs
fishrambeta/src/math/: calculate.rs  calculate_exact.rs  compare.rs  differentiate.rs  equation_system.rs  error_analysis.rs  factors.rs  function_types.rs  mod.rs  multiply_by.rs  polynomial.rs  simplify.rs  steps.rs  taylor_series.rs  to_latex.rs
fishrambeta/src/math/calculate/: calculate_exact.rs  evaluate.rs  mod.rs
fishrambeta/src/math/integrate/: bogointegrate.rs  mod.rs  rational.rs
fishrambeta/src/math/simplify/: addition.rs  division.rs  logarithm.rs  mod.rs  multiplication.rs  power.rs
fishrambeta/src/parser/: equation.rs  formatters.rs  ir.md  latex.rs  mod.rs  numpy.rs
