[package]
name = "fishrambeta-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
fishrambeta = {path="../fishrambeta"}
console_error_panic_hook = "0.1.7"
getrandom = { version = "*", features = ["js"] }
web-sys = { version = "0.3", features= ["console"] }

