[package]
name = "fishrambeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
